--- a/src/app/homepage/procedures/procedures.component.html
+++ b/src/app/homepage/procedures/procedures.component.html
@@ -1,1 +1,30 @@
-<p>procedures works!</p>
+<mat-sidenav-container class="example-container" style="background-color: #424242">
+
+  <mat-sidenav  mode="side" opened >
+    <app-homepage-list></app-homepage-list>
+  </mat-sidenav>
+  <mat-sidenav-content >
+    <div>
+      <ul>
+        <h3>Procedures:</h3>
+        <li>Procedure regarding Safety Notification Management
+          <a href="assets/files/Safety Notification Distribution.pdf" target="_blank" class="link">PV_SOP_01
+            <mat-icon >description</mat-icon>
+          </a>
+
+        </li>
+        <li>Procedure regarding SUSAR Distribution Process
+          <a href="assets/files/SUSAR Distribution Process.pdf" target="_blank">PV_SOP_02
+            <mat-icon >description</mat-icon>
+          </a>
+        </li>
+        <li>Procedure regarding Pharmacovigilance Department Structure
+          <a href="assets/files/Pharmacovigilance Department Structure.pdf" target="_blank">PV_SOP_03
+            <mat-icon >description</mat-icon>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </mat-sidenav-content>
+
+</mat-sidenav-container>
