--- a/src/app/homepage/news/news.component.html
+++ b/src/app/homepage/news/news.component.html
@@ -1,16 +1,17 @@
 <mat-sidenav-container class="example-container" style="background-color: #424242">
 
-  <mat-sidenav  mode="side" opened >
+  <mat-sidenav mode="side" opened>
     <app-homepage-list></app-homepage-list>
   </mat-sidenav>
 
 
 
-  <mat-sidenav-content >
+  <mat-sidenav-content>
     <div>
       <ul>
         <h3>Updates:</h3>
-        <li>New SUSAR table has been added. Since this moment it is possible to track SUSARs distribution process in system.</li>
+        <li>New SUSAR table has been added. Since this moment it is possible to track SUSARs distribution process in
+          system.</li>
         <li>New dashboard has been added. Since this moment it is possible to present SUSAR types on the dashboard.</li>
         <li>Problem with filters has been solved.</li>
       </ul>
