--- a/src/app/homepage/team/team-table/team-table.component.html
+++ b/src/app/homepage/team/team-table/team-table.component.html
@@ -6,51 +6,55 @@
 
   <button mat-raised-button color="primary" (click)="openDialog()">Create</button>
 
-  <table mat-table  [dataSource]="dataSource" matSort class="mat-elevation-z8" >
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
     <!-- Position Column -->
-    <ng-container  matColumnDef="iD">
+    <ng-container matColumnDef="iD">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> ID. </th>
       <td mat-cell *matCellDef="let element"> {{element.iD}} </td>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container  matColumnDef="name">
+    <ng-container matColumnDef="name">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
     <!-- LastName Column -->
-    <ng-container  matColumnDef="lastname">
+    <ng-container matColumnDef="lastname">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> LastName </th>
       <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
     </ng-container>
 
     <!-- Study Column -->
-    <ng-container  matColumnDef="study">
+    <ng-container matColumnDef="study">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Study </th>
       <td mat-cell *matCellDef="let element"> {{element.study}} </td>
     </ng-container>
 
     <!-- Country Column -->
-    <ng-container  matColumnDef="country">
+    <ng-container matColumnDef="country">
       <th mat-header-cell mat-sort-header *matHeaderCellDef> Country </th>
       <td mat-cell *matCellDef="let element"> {{element.country}} </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>  </th>
+      <th mat-header-cell *matHeaderCellDef> </th>
       <mat-cell *matCellDef="let row">
-        <button mat-icon-button color="primary" (click)="startEdit(row)"><mat-icon>launch</mat-icon></button>
-        <button mat-icon-button color="primary" (click)="deleteRecord(row.iD)"><mat-icon>delete_outline</mat-icon></button>
+        <button mat-icon-button color="primary" (click)="startEdit(row)">
+          <mat-icon>launch</mat-icon>
+        </button>
+        <button mat-icon-button color="primary" (click)="deleteRecord(row.iD)">
+          <mat-icon>delete_outline</mat-icon>
+        </button>
       </mat-cell>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[10,25]" [pageSize] = "10" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[10,25]" [pageSize]="10" showFirstLastButtons></mat-paginator>
 </div>
