--- a/src/app/list-filters-countries/list-filters-countries.component.html
+++ b/src/app/list-filters-countries/list-filters-countries.component.html
@@ -1,13 +1,14 @@
 <mat-expansion-panel>
-<mat-expansion-panel-header>
-  <mat-panel-title>
-    Country
-  </mat-panel-title>
-</mat-expansion-panel-header>
-<mat-selection-list #shoes [(ngModel)]="selectedOptions" (ngModelChange)="onNgModelChange($event)" [style.overflow]="'auto'" [style.height.px]="'300'">
-  <mat-list-option *ngFor="let ncountry of countries" [value] ="ncountry.country">
-    {{ncountry.country}}
-  </mat-list-option>
-</mat-selection-list>
-{{selectedOption}}
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      Country
+    </mat-panel-title>
+  </mat-expansion-panel-header>
+  <mat-selection-list #shoes [(ngModel)]="selectedOptions" (ngModelChange)="onNgModelChange($event)"
+    [style.overflow]="'auto'" [style.height.px]="'300'">
+    <mat-list-option *ngFor="let ncountry of countries" [value]="ncountry.country">
+      {{ncountry.country}}
+    </mat-list-option>
+  </mat-selection-list>
+  {{selectedOption}}
 </mat-expansion-panel>
