--- a/src/app/my-table/my-table.component.html
+++ b/src/app/my-table/my-table.component.html
@@ -1,75 +1,77 @@
 <div class="susarlis">
-<table mat-table  [dataSource]="dataSource" matSort class="mat-elevation-z8" >
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
-  <!--- Note that these columns can be defined in any order.
+    <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
-  <!-- Position Column -->
-  <ng-container  matColumnDef="iD">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> ID. </th>
-    <td mat-cell *matCellDef="let element"> {{element.iD}} </td>
-  </ng-container>
+    <!-- Position Column -->
+    <ng-container matColumnDef="iD">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> ID. </th>
+      <td mat-cell *matCellDef="let element"> {{element.iD}} </td>
+    </ng-container>
 
-  <!-- Study Column -->
-  <ng-container  matColumnDef="study">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> Study </th>
-    <td mat-cell *matCellDef="let element"> {{element.study}} </td>
-  </ng-container>
+    <!-- Study Column -->
+    <ng-container matColumnDef="study">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> Study </th>
+      <td mat-cell *matCellDef="let element"> {{element.study}} </td>
+    </ng-container>
 
-  <!-- Country Column -->
-  <ng-container  matColumnDef="country">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> Country </th>
-    <td mat-cell *matCellDef="let element"> {{element.country}} </td>
-  </ng-container>
+    <!-- Country Column -->
+    <ng-container matColumnDef="country">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> Country </th>
+      <td mat-cell *matCellDef="let element"> {{element.country}} </td>
+    </ng-container>
 
-  <!-- Site Column -->
-  <ng-container  matColumnDef="site">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> Site </th>
-    <td mat-cell *matCellDef="let element"> {{element.site}} </td>
-  </ng-container>
+    <!-- Site Column -->
+    <ng-container matColumnDef="site">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> Site </th>
+      <td mat-cell *matCellDef="let element"> {{element.site}} </td>
+    </ng-container>
 
-  <!-- Number Column -->
-  <ng-container matColumnDef="number">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> Number </th>
-    <td mat-cell *matCellDef="let element"> {{element.number}} </td>
-  </ng-container>
+    <!-- Number Column -->
+    <ng-container matColumnDef="number">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> Number </th>
+      <td mat-cell *matCellDef="let element"> {{element.number}} </td>
+    </ng-container>
 
-  <!-- Type Column -->
-  <ng-container matColumnDef="type">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> Type </th>
-    <td mat-cell *matCellDef="let element"> {{element.type}} </td>
-  </ng-container>
+    <!-- Type Column -->
+    <ng-container matColumnDef="type">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> Type </th>
+      <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+    </ng-container>
 
-  <!-- ReciptDate Column -->
-  <ng-container matColumnDef="reciptDate">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> Recipt Date </th>
-    <td mat-cell *matCellDef="let element"> {{element.reciptDate | date: 'dd MMM yyyy'}} </td>
-  </ng-container>
+    <!-- ReciptDate Column -->
+    <ng-container matColumnDef="reciptDate">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> Recipt Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.reciptDate | date: 'dd MMM yyyy'}} </td>
+    </ng-container>
 
-  <!-- SentDate Column -->
-  <ng-container matColumnDef="sentDate">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> Sent Date </th>
-    <td mat-cell *matCellDef="let element"> {{element.sentDate | date: 'dd MMM yyyy'}} </td>
-  </ng-container>
+    <!-- SentDate Column -->
+    <ng-container matColumnDef="sentDate">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> Sent Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.sentDate | date: 'dd MMM yyyy'}} </td>
+    </ng-container>
 
-  <!-- AoR Date Column -->
-  <ng-container matColumnDef="aorDate">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef > AoR Date </th>
-    <td mat-cell *matCellDef="let element" > {{element.aorDate | date: 'dd MMM yyyy'}}</td>
-  </ng-container>
+    <!-- AoR Date Column -->
+    <ng-container matColumnDef="aorDate">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef> AoR Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.aorDate | date: 'dd MMM yyyy'}}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="actions">
-  <th mat-header-cell *matHeaderCellDef>  </th>
-  <mat-cell *matCellDef="let row">
-    <button mat-icon-button color="primary" (click)="startEdit(row)"><mat-icon>launch</mat-icon></button>
-    <button mat-icon-button color="primary" (click)="deleteRecord(row.iD)"><mat-icon>delete_outline</mat-icon></button>
-    </mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> </th>
+      <mat-cell *matCellDef="let row">
+        <button mat-icon-button color="primary" (click)="startEdit(row)">
+          <mat-icon>launch</mat-icon>
+        </button>
+        <button mat-icon-button color="primary" (click)="deleteRecord(row.iD)">
+          <mat-icon>delete_outline</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-  <mat-paginator [pageSizeOptions]="[10,25]" [pageSize] = "10" showFirstLastButtons></mat-paginator>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[10,25]" [pageSize]="10" showFirstLastButtons></mat-paginator>
 </div>
-
-
