I added training module

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,6 +3,7 @@
     <button mat-button *ngIf="isLoggedIn" routerLink="/#Home/News">Home</button>
     <button mat-button *ngIf="isLoggedIn" routerLink="/#Susars">SUSAR</button>
     <button mat-button *ngIf="isLoggedIn" routerLink="/#Dashboards">Dashboards</button>
+    <button mat-button routerLink="training-actions" *ngIf="isLoggedIn">Trainings</button>
     <button mat-button class="nav-item" *ngIf="isLoggedIn" href="/user" class="nav-link" routerLink="user">
       User
     </button>
